# fin-ai-stats-extract

./: .env.example  .gitignore  Copilot-Processing.md  Output.docx  README.md  deepseek_test.csv  main.py  pyproject.toml  required_output.md  streamlit_app.py  test.csv
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-30-fin-ai-stats-extract-packaging.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChoiceSelect.tsx  Field.tsx
frontend/src/components/tabs/: AiSettingsTab.tsx  InstructionsTab.tsx  OutputFormatTab.tsx  RunTab.tsx
frontend/src/lib/: api.ts
prompts/: system_prompt.md
src/: cost.py  extractor.py  openai_utils.py  parser.py  pipeline.py  prompts.py  schema.py  writer.py
src/fin_ai_stats_extract/: __init__.py  cli.py  config.py  cost.py  extractor.py  gui.py  openai_utils.py  pipeline.py  prompts.py  schema.py  streamlit_app.py  toml_io.py  writer.py
src/fin_ai_stats_extract/resources/: __init__.py  config.toml  extract.toml
src/fin_ai_stats_extract/resources/webui/: index.html
src/fin_ai_stats_extract/resources/webui/assets/: index-Bd45NAe4.js  index-DgEWbKOh.css
tests/: test_config.py  test_cost.py  test_extractor.py  test_gui.py  test_main_cli.py  test_pipeline.py  test_prompts.py  test_toml_io.py  test_writer.py
